--- a/dbtest/dbtest/templates/detail.html
+++ b/dbtest/dbtest/templates/detail.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="button" value="수정" onclick="location.href='/updateForm/{{ dto.id }}'">
+                <input type="button" value="수정" onclick="location.href='/updateform/{{ dto.id }}'">
                 <input type="button" value="목록" onclick="location.href='{% url 'index' %}'">
                 <input type="button" value="삭제" onclick="location.href='/delete/{{ dto.id }}'">
             </td>
